--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-language: node_js   #前端工程所以是JavaScript，编译环境是node_js
+language: node_js
 node_js:
-- '8'   #指定node版本
+- '8'
 branchs:
   only:
-  - master  #指定只有检测到master分支有变动时才执行
+  - master
+before_install:
+- openssl aes-256-cbc -K $encrypted_0d9a59502154_key -iv $encrypted_0d9a59502154_iv
+  -in id_rsa.enc -out id_rsa -d
