--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_install:
  #- git config --global user.email 895817341@qq.com
 
 # 执行install
-#install:
- #- npm install
+install:
+ - npm install
 
 # 执行命令脚本
 script:
